# advent2023

./: .gitignore  Cargo.toml  Release.toml  Trunk.toml  release.sh  rust-toolchain.toml
advent2023-bin/: Cargo.toml
advent2023-bin/src/: main.rs
advent2023-lib/: Cargo.toml
advent2023-lib/benches/: benchmark_day00.rs
advent2023-lib/src/: day00_template.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  lib.rs  parser.rs  test.rs
advent2023-web/: Cargo.toml  index.html
advent2023-web/assets/css/: main.css
advent2023-web/src/: file.rs  main.rs  web.rs
