[package]
name = "advent2023-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
cached = "0.46"
log = "0.4"
ndarray = "0.15"
pathfinding = "4"
recap = "0.1.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_with = "2"
strum = "0.25"
strum_macros = "0.25"
once_cell = "1.18"
num-integer = "0.1.45"

[dev-dependencies]
criterion = "0.5"
env_logger = "0.10"
test-log = "0.2"

# [[bench]]
# name = "benchmark_day00"
# harness = false
